--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12">
-      <img src="../images/iphone6.png" class="title_image" alt="iphone-mockup">
+      <img src="images/iphone6.png" class="title_image" alt="iphone-mockup">
     </div>
 </div>
         </div>
@@ -95,7 +95,7 @@
           <div class="carousel-inner">
               <div class="carousel-item active container-fluid" data-bs-intervall="1000">
                 <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-                <img class="testimonial-image" src="../images/dog-img.jpg" alt="dog-profile">
+                <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
                 <em>Pebbles, New York</em>
               </div>
               <div class="carousel-item container-fluid" data-bs-intervall="1000">
@@ -119,10 +119,10 @@
   <!-- Press -->
 
   <section id="press" class="text-center">
-    <img class="press-logo" src="../images/techcrunch.png" alt="tc-logo">
-    <img class="press-logo" src="../images/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="../images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="../images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
