--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- Title -->
 <div class="row">
-    <div class="col-lg-6 col-md-12 col-sm-12">
+    <div class="col-lg-6 col-md-12 col-sm-12 col-12">
       <h1 class="big_heading">Meet new and interesting dogs nearby.</h1>
       <button type="button" class="btn btn-dark btn-lg download-button" ><i class="fab fa-apple"></i> Download</button>
       <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
@@ -63,17 +63,17 @@
   <section id="features">
       <div class="container-fluid">
           <div class="row">
-              <div class="col-lg-4 col-md-12 col-sm-12 text-center feature">
+              <div class="col-lg-4 col-md-12 col-sm-12 text-center feature col-12">
                   <i class="far fa-check-circle f fa-4x"></i>
                 <h3 class="feature-heading">Easy to use.</h3>
                 <p>So easy to use, even your dog could do it.</p>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 text-center feature">
+              <div class="col-lg-4 col-md-12 col-sm-12 text-center feature col-12">
                   <i class="fa fa-bullseye f fa-4x"></i>
                 <h3 class="feature-heading">Elite Clientele</h3>
                 <p>We have all the dogs, the greatest dogs.</p>
               </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 text-center feature">
+              <div class="col-lg-4 col-md-12 col-sm-12 text-center feature col-12">
                   <i class="fa fa-heart f fa-4x"></i>
                 <h3 class="feature-heading">Guaranteed to work.</h3>
                 <p>Find the love of your dog's life or your money back.</p>
@@ -135,7 +135,7 @@
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <div class="row">
-        <div class=" pricing col-lg-4 col-md-6">
+        <div class=" pricing col-lg-4 col-md-6 col-12">
             <div class="card">
                 <div class="card-header">
                     <h3>Chihuahua</h3>
@@ -149,7 +149,7 @@
                 </div>
             </div>
         </div>
-        <div class="pricing col-lg-4 col-md-6">
+        <div class="pricing col-lg-4 col-md-6 col-12">
             <div class="card">
                 <div class="card-header">
                     <h3>Labrador</h3>
@@ -164,7 +164,7 @@
             </div>
         </div>
 
-        <div class="pricing col-lg-4">
+        <div class="pricing col-lg-4 col-12">
             <div class="card">
                 <div class="card-header">
                     <h3>Mastiff</h3>
