--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
             <a href="http://www.instagram.com/U2010134"><i class="fab fa-instagram icon"></i></a>
             <a href="mailto:khayotovkhojiakbar@gmail.com"><i class="fas fa-envelope icon"></i></a>
             <p>&copy; Copyright 2021 TinDog</p>
+            <p> Khayotov Khojiakbar</p>
       </div>
 
   </footer>
